@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,6 @@ import java.io.IOException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 
-import org.apache.commons.lang.StringUtils;
 import org.openhab.core.io.net.http.HttpUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -35,23 +34,22 @@ public class DwdWarningDataAccess {
 
     /**
      * Returns the raw Data from the Endpoint.
-     * In case of errors or empty cellId value, returns an {@link StringUtils#EMPTY Empty String}.
+     * In case of errors or empty cellId value, returns an empty String.
      *
      * @param cellId The warnCell-Id for which the warnings should be returned
      * @return The raw data received or an empty string.
      */
     public String getDataFromEndpoint(String cellId) {
         try {
-            if (StringUtils.isBlank(cellId)) {
+            if (cellId == null || cellId.isBlank()) {
                 logger.warn("No cellId provided");
-                return StringUtils.EMPTY;
+                return "";
             }
 
             StringBuilder stringBuilder = new StringBuilder();
             stringBuilder.append(DWD_URL);
             stringBuilder.append("&CQL_FILTER=");
-            stringBuilder
-                    .append(URLEncoder.encode("WARNCELLID LIKE '" + cellId + "'", StandardCharsets.UTF_8.toString()));
+            stringBuilder.append(URLEncoder.encode("WARNCELLID LIKE '" + cellId + "'", StandardCharsets.UTF_8));
             logger.debug("Refreshing Data for cell {}", cellId);
             String rawData = HttpUtil.executeUrl("GET", stringBuilder.toString(), 5000);
             logger.trace("Raw request: {}", stringBuilder);
@@ -63,6 +61,6 @@ public class DwdWarningDataAccess {
             logger.debug("Communication error trace", e);
         }
 
-        return StringUtils.EMPTY;
+        return "";
     }
 }
