@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -19,7 +19,8 @@ import java.util.concurrent.TimeUnit;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
-import org.openhab.binding.lutron.internal.protocol.LutronCommandType;
+import org.openhab.binding.lutron.internal.protocol.ModeCommand;
+import org.openhab.binding.lutron.internal.protocol.lip.LutronCommandType;
 import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.library.types.OnOffType;
 import org.openhab.core.thing.Bridge;
@@ -39,8 +40,7 @@ import org.slf4j.LoggerFactory;
  */
 @NonNullByDefault
 public class GreenModeHandler extends LutronHandler {
-    private static final Integer ACTION_STEP = 1;
-    public static final int GREENSTEP_MIN = 1;
+    private static final int GREENSTEP_MIN = 1;
 
     // poll interval parameters are in minutes
     private static final int POLL_INTERVAL_DEFAULT = 15;
@@ -94,7 +94,8 @@ public class GreenModeHandler extends LutronHandler {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR, "No bridge configured");
         } else if (bridge.getStatus() == ThingStatus.ONLINE) {
             updateStatus(ThingStatus.UNKNOWN, ThingStatusDetail.NONE, "Awaiting initial response");
-            queryGreenMode(ACTION_STEP); // handleUpdate() will set thing status to online when response arrives
+            queryGreenMode(ModeCommand.ACTION_STEP);
+            // handleUpdate() will set thing status to online when response arrives
         } else {
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.BRIDGE_OFFLINE);
         }
@@ -113,22 +114,23 @@ public class GreenModeHandler extends LutronHandler {
     }
 
     private void stopPolling() {
+        ScheduledFuture<?> pollJob = this.pollJob;
         if (pollJob != null) {
+            this.pollJob = null;
             logger.debug("Canceling green mode polling job for integration ID {}", integrationId);
             pollJob.cancel(true);
-            pollJob = null;
         }
     }
 
     private synchronized void pollState() {
         logger.trace("Executing green mode polling job for integration ID {}", integrationId);
-        queryGreenMode(ACTION_STEP);
+        queryGreenMode(ModeCommand.ACTION_STEP);
     }
 
     @Override
     public void channelLinked(ChannelUID channelUID) {
         if (channelUID.getId().equals(CHANNEL_STEP)) {
-            queryGreenMode(ACTION_STEP);
+            queryGreenMode(ModeCommand.ACTION_STEP);
         }
     }
 
@@ -136,16 +138,16 @@ public class GreenModeHandler extends LutronHandler {
     public void handleCommand(ChannelUID channelUID, Command command) {
         if (channelUID.getId().equals(CHANNEL_STEP)) {
             if (command == OnOffType.ON) {
-                greenMode(ACTION_STEP, 2);
+                greenMode(ModeCommand.ACTION_STEP, 2);
             } else if (command == OnOffType.OFF) {
-                greenMode(ACTION_STEP, 1);
+                greenMode(ModeCommand.ACTION_STEP, 1);
             } else if (command instanceof Number) {
-                Integer step = new Integer(((Number) command).intValue());
+                Integer step = ((Number) command).intValue();
                 if (step.intValue() >= GREENSTEP_MIN) {
-                    greenMode(ACTION_STEP, step);
+                    greenMode(ModeCommand.ACTION_STEP, step);
                 }
             } else if (command instanceof RefreshType) {
-                queryGreenMode(ACTION_STEP);
+                queryGreenMode(ModeCommand.ACTION_STEP);
             } else {
                 logger.debug("Ignoring invalid command {} for id {}", command, integrationId);
             }
@@ -158,8 +160,8 @@ public class GreenModeHandler extends LutronHandler {
     public void handleUpdate(LutronCommandType type, String... parameters) {
         try {
             if (type == LutronCommandType.MODE && parameters.length > 1
-                    && ACTION_STEP.toString().equals(parameters[0])) {
-                Long step = new Long(parameters[1]);
+                    && ModeCommand.ACTION_STEP.toString().equals(parameters[0])) {
+                Long step = Long.valueOf(parameters[1]);
                 if (getThing().getStatus() == ThingStatus.UNKNOWN) {
                     updateStatus(ThingStatus.ONLINE);
                     startPolling();
