@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -21,7 +21,6 @@ import java.util.Objects;
 
 import javax.ws.rs.core.Response;
 
-import org.apache.commons.io.IOUtils;
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 
@@ -59,7 +58,7 @@ public class HttpResponse {
 
         if (response.hasEntity()) {
             InputStream is = response.readEntity(InputStream.class);
-            contents = IOUtils.toByteArray(is);
+            contents = is.readAllBytes();
         } else {
             contents = null;
         }
@@ -75,9 +74,9 @@ public class HttpResponse {
      * @param httpCode the http code
      * @param msg the msg
      */
-    HttpResponse(int httpCode, String msg) {
+    HttpResponse(int httpCode, @Nullable String msg) {
         httpStatus = httpCode;
-        httpReason = msg;
+        httpReason = msg != null ? msg : "";
         contents = null;
     }
 
